# fiberOrca

./: .gitignore  LICENSE  README.md
.github/workflows/: workflow.yml
docs/: README.md
front/: connect.go  main.go  output.go  parse.go
frontend/: connect.go  connect_test.go  go.mod  go.sum  main.go  output.go  parse.go
frontend/models/: filter.go  models_test.go  packet.go  packetPreview.go  packetView.go  session.go  testData.go  validation.go
libpcap-1.10.5/: Makefile  config.h  config.status  grammar.y  libpcap.pc  libpcap.so.1.10.5  pcap-config
libpcap-1.10.5/rpcapd/: Makefile
libpcap-1.10.5/testprogs/: Makefile
release/: fiberOrca  network_analyzer
scripts/: install_libpcap.sh  run.sh
sniffer/: CMakeLists.txt
sniffer/include/: capture.h  common.h  connect_and_send.h  create_handle.h  funny.h  get_header_len.h  packet_handler.h  parse_packet.h  stop_capture.h
sniffer/src/: capture.c  connect_and_send.c  globals.c  main.c  packet_handler.c  parse_packet.c
sniffer/src/capture/: capture.c
sniffer/src/ipc/: msg_que.c
sniffer/src/protocols/: ip_datagram.c
sniffer/src/utils/: is_even.c
sniffer/tests/: CMakeLists.txt  test.c
test/: tester.py
